# libemf-msvc

./: README.md
src/libemf/: libemf.sln
src/libemf/libemf/: dllmain.cpp  libemf.def  libemf.vcxproj  libemf.vcxproj.filters
src/libemf/libemf/libemf-1.0.13/include/: Makefile.am  Makefile.in  emf_byteswap.h  emf_config.h
src/libemf/libemf/libemf-1.0.13/include/libEMF/: emf.h
src/libemf/libemf/libemf-1.0.13/include/libEMF/wine/: basetsd.h  poppack.h  pshpack2.h  pshpack4.h  w16.h  winbase.h  winnt.h
src/libemf/libemf/libemf-1.0.13/libemf/: Makefile.am  Makefile.in  libemf.cpp  libemf.h
src/libemf/libiconv-source/: README.md
